[workspace]
members = [
    "hadoop-common-project/hadoop-common",
    "hadoop-hdfs-project/hadoop-hdfs",
    "hadoop-hdfs-project/hadoop-hdfs-client",
]

[workspace.package]
version = "0.0.1"
authors = ["InnoRealm"]
edition = "2021"
description = "Hadoop Rust"
repository = "https://github.com/innorealm/hadoop-rust"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.72"
atomic = "0.6.0"
clap = { version = "4.3.21", features = ["derive"] }
hadoop-common = { path = "hadoop-common-project/hadoop-common", version = "0.0.1" }
hadoop-hdfs-client = { path = "hadoop-hdfs-project/hadoop-hdfs-client", version = "0.0.1" }
iref = "2.2.3"
once_cell = "1.18.0"
prost = "0.11.9"
prost-build = "0.11.9"
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4"] }
whoami = "1.4.1"
