[workspace]
resolver = "2"
members = ["hadoop"]

[workspace.package]
version = "0.0.3"
authors = ["InnoRealm"]
edition = "2021"
description = "Hadoop Rust"
repository = "https://github.com/innorealm/hadoop-rust"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.79"
atomic = "0.6.0"
clap = { version = "4.4.18", features = ["derive"] }
iref = "3.1.3"
once_cell = "1.19.0"
prost = "0.12.3"
prost-build = "0.12.3"
uuid = { version = "1.7.0", features = ["v4"] }
whoami = "1.4.1"
