[package]
name = "hadoop"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
atomic.workspace = true
clap.workspace = true
iref.workspace = true
once_cell.workspace = true
prost.workspace = true
uuid.workspace = true
whoami.workspace = true

[build-dependencies]
prost-build.workspace = true
